Attempt to use more variables outside the command and env section

--- a/variable-replacements/base/configMap.yaml
+++ b/variable-replacements/base/configMap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: the-configmap
 data:
-  item1: "$(SOME_SITEVALUE_3)"
+  item1: $(SOME_SITEVALUE_3)
   item2: "bla"
