--- a/variable-replacements/base/secret.yaml
+++ b/variable-replacements/base/secret.yaml
@@ -4,5 +4,7 @@ metadata:
   name: the-secret
 type: Opaque
 data:
+  # username: $(SOME_SITEVALUE_1)
+  # password: $(SOME_SITEVALUE_2)
   username: YWRtaW4=
   password: MWYyZDFlMmU2N2Rm
