--- a/variable-replacements/overlays/site1/site-values.yaml
+++ b/variable-replacements/overlays/site1/site-values.yaml
@@ -4,7 +4,7 @@ metadata:
   name: site-values
 type: Opaque
 data:
-  username: YWRtaW4=
-  password: MWYyZDFlMmU2N2Rm
+  username: c2l0ZTEtdXNlcm5hbWUK
+  password: c2l0ZTEtcGFzc3dvcmQK
 stringData:
   somevalue: site1-specific-value
