--- a/variable-replacements/overlays/site2/site-values.yaml
+++ b/variable-replacements/overlays/site2/site-values.yaml
@@ -4,7 +4,7 @@ metadata:
   name: site-values
 type: Opaque
 data:
-  username: YWRtaW4=
-  password: MWYyZDFlMmU2N2Rm
+  username: c2l0ZTItdXNlcm5hbWUK
+  password: c2l0ZTItcGFzc3dvcmQK
 stringData:
   somevalue: site2-specific-value
