--- a/deckhand-poc/base/kustomization.yaml
+++ b/deckhand-poc/base/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
-- resources.yaml
+- manifest.yaml
+- manifest_as_crd.yaml
 
 namePrefix: test-
 
@@ -7,13 +8,6 @@ commonLabels:
   foo: bar
 
 vars:
-- name: BEE_ACTION
-  objref:
-    kind: Bee
-    name: bee
-    apiVersion: v1beta1
-  fieldref:
-    fieldpath: spec.action
 
 configurations:
 - kustomizeconfig/armadamanifest.yaml
