--- a/deckhand-poc/base/kustomizeconfig/armadamanifest.yaml
+++ b/deckhand-poc/base/kustomizeconfig/armadamanifest.yaml
@@ -1,20 +1,20 @@
 commonLabels:
 - path: spec/selectors
   create: true
-  kind: ArmadaChart
+  kind: ArmadaManifest
 
 nameReference:
 - kind: Bee
   fieldSpecs:
   - path: spec/beeRef/name
-    kind: ArmadaChart
+    kind: ArmadaManifest
 - kind: Secret
   fieldSpecs:
   - path: spec/secretRef/name
-    kind: ArmadaChart
+    kind: ArmadaManifest
 
 varReference:
 - path: spec/containers/command
-  kind: ArmadaChart
+  kind: ArmadaManifest
 - path: spec/beeRef/action
-  kind: ArmadaChart
+  kind: ArmadaManifest
