--- a/deckhand-poc-asit/overlays/production/kustomization.yaml
+++ b/deckhand-poc-asit/overlays/production/kustomization.yaml
@@ -1,7 +1,5 @@
 bases:
   - ../../base
-patchesStrategicMerge:
-  - armada_patch.yaml
 patchesJson6902:
 - target:
     group: airship
@@ -11,7 +9,7 @@ patchesJson6902:
   path: armada_patch.yaml
 
 nameprefix: staging-
-configMapGenerator:
-  - name: env-config
-    files:
-      - config.env
+#configMapGenerator:
+#  - name: env-config
+#    files:
+#      - config.env
