--- a/deckhand-poc-asit/overlays/addjson/kustomization.yaml
+++ b/deckhand-poc-asit/overlays/addjson/kustomization.yaml
@@ -1,5 +1,10 @@
+---
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 bases:
-  - ../../base
+- ../../base
+
 patchesJson6902:
 - target:
     group: airship
@@ -8,8 +13,4 @@ patchesJson6902:
     name: full-site-global
   path: armada_patch.yaml
 
-nameprefix: staging-
-#configMapGenerator:
-#  - name: env-config
-#    files:
-#      - config.env
+nameprefix: addjson-
