--- a/deckhand-poc-asit/overlays/patchmerge/kustomization.yaml
+++ b/deckhand-poc-asit/overlays/patchmerge/kustomization.yaml
@@ -2,7 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-- bee.yaml
+bases:
+- ../../base
+
 patchesStrategicMerge:
-- patch.yaml
+- armada_patch.yaml
+
+nameprefix: patchmerge-
