--- a/deckhand-poc-ascrd/overlays/site1/kustomization.yaml
+++ b/deckhand-poc-ascrd/overlays/site1/kustomization.yaml
@@ -2,10 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-- resources.yaml
+bases:
+- ../../ucp
 
-namePrefix: test-
+# namePrefix: site1-
 
 commonLabels:
-  foo: bar
+  site-label: site1
+
+patchesStrategicMerge:
+- site-manifest.yaml
