--- a/deckhand-poc-ascrd/replacement/kustomization.yaml
+++ b/deckhand-poc-ascrd/replacement/kustomization.yaml
@@ -4,13 +4,14 @@ kind: Kustomization
 
 resources:
 - replacement.yaml
+- sample-doc.yaml
 
-namePrefix: ucp-
+namePrefix: poc-
 
-namespace: ucp
+namespace: deckhand
 
 commonLabels:
-  ucp-label: common
+  deckhand-poc-label: replacement
 
 vars:
 - name: THE_CERTIFICATE
@@ -27,7 +28,14 @@ vars:
     apiVersion: deckhand.airshipit.org/v1alpha
   fieldref:
     fieldpath: spec
-
+- name: INSERT_PASSWORD_HERE
+  objref:
+    kind: DeckhandPassphrase
+    name: example-password
+    apiVersion: deckhand.airshipit.org/v1alpha
+  fieldref:
+    fieldpath: spec
 
 configurations:
 - kustomizeconfig/armadachart.yaml
+- kustomizeconfig/promenaderesourcetype.yaml
