--- a/deckhand-poc-asit/overlays/addjson/armada_patch.yaml
+++ b/deckhand-poc-asit/overlays/addjson/armada_patch.yaml
@@ -1,5 +1,6 @@
 - op: add
-  path: /data/chart_groups_added
-  value:
-  - added-by-addjson-1
-  - added-by-addjson-2
+  path: /data/chart_groups/10
+  value: added-by-addjson-1
+- op: add
+  path: /data/chart_groups/11
+  value: added-by-addjson-2
