Add new plugins and transformers

--- a/kustomize-plugins/custom-plugin/deployment.yaml
+++ b/kustomize-plugins/custom-plugin/deployment.yaml
@@ -1,16 +1,8 @@
-apiVersion: v1
-data:
-  FRUIT: YXBwbGU=
-  VEGETABLE: Y2Fycm90
-kind: Secret
-metadata:
-  name: apple-2018-05-11-mysecrets-4d9t6h6m67
-type: Opaque
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: apple-2018-05-11-apple-myDeployment
+  name: apple-myDeployment
 spec:
   template:
     metadata:
