--- a/kustomize-plugins/custom-plugin/kustomization.yaml
+++ b/kustomize-plugins/custom-plugin/kustomization.yaml
@@ -1,3 +1,10 @@
+---
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+resources:
+- deployment.yaml
+
 secretGenerator:
 - name: mysecrets
   kvSources:
@@ -6,3 +13,10 @@ secretGenerator:
     args:
     - FRUIT
     - VEGETABLE
+
+generators:
+# - generators/serviceGenerator.yaml
+
+transformers:
+- transformers/datePrefixer.yaml
+- transformers/stringPrefixer.yaml
