go module dependency magically disappeared

--- a/kustomize-plugins/custom-plugin/kustomization.yaml
+++ b/kustomize-plugins/custom-plugin/kustomization.yaml
@@ -15,7 +15,7 @@ secretGenerator:
     - VEGETABLE
 
 generators:
-# - generators/serviceGenerator.yaml
+- generators/serviceGenerator.yaml
 
 transformers:
 - transformers/datePrefixer.yaml
