--- a/deckhand-poc-ascrd/airship/kustomization.yaml
+++ b/deckhand-poc-ascrd/airship/kustomization.yaml
@@ -3,14 +3,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- airloop.yaml
+- airship.yaml
 
 namePrefix: poc-
 
-namespace: airloop
+namespace: airship
 
 commonLabels:
-  deckhand-poc-label: airloop
+  deckhand-poc-label: airship
 
 configurations:
 - kustomizeconfig/ArmadaChartGroup.yaml
