--- a/deckhand-poc-ascrd/airship/crds/ArmadaChartGroup.yaml
+++ b/deckhand-poc-ascrd/airship/crds/ArmadaChartGroup.yaml
@@ -2,10 +2,29 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: ArmadaChartGroup
+  name: ArmadaChartGroup.armada.airship.org
   labels:
     application: armada
 spec:
+  additionalPrinterColumns:
+  group: armada.airshipit.org
+  version: v1alpha1
+  names:
+    kind: ArmadaChartGroup
+    plural: ArmadaChartGroups
+    shortNames:
+    - ArmadaChartGroup
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   additionalProperties: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
