--- a/deckhand-poc-ascrd/airship/crds/ArmadaManifest.yaml
+++ b/deckhand-poc-ascrd/airship/crds/ArmadaManifest.yaml
@@ -2,10 +2,29 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: ArmadaManifest
+  name: ArmadaManifest.armada.airship.org
   labels:
     application: armada
 spec:
+  additionalPrinterColumns:
+  group: armada.airshipit.org
+  version: v1alpha1
+  names:
+    kind: ArmadaManifest
+    plural: ArmadaManifests
+    shortNames:
+    - ArmadaManifest
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   additionalProperties: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
