--- a/deckhand-poc-ascrd/airship/crds/DrydockBaremetalNode.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockBaremetalNode.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockBaremetalNode
+  name: DrydockBaremetalNode.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockBaremetalNode
+    plural: DrydockBaremetalNodes
+    shortNames:
+    - DrydockBaremetalNode
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     addressing:
@@ -159,4 +172,10 @@ spec:
             items:
               type: 'string'
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
