--- a/deckhand-poc-ascrd/airship/crds/DrydockBootAction.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockBootAction.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockBootAction
+  name: DrydockBootAction.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockBootAction
+    plural: DrydockBootActions
+    shortNames:
+    - DrydockBootAction
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   additionalProperties: false
   properties:
@@ -89,4 +102,10 @@ spec:
               rack_labels:
                 type: 'object'
                 additionalProperties: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
