--- a/deckhand-poc-ascrd/airship/crds/DrydockHardwareProfile.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockHardwareProfile.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockHardwareProfile
+  name: DrydockHardwareProfile.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockHardwareProfile
+    plural: DrydockHardwareProfiles
+    shortNames:
+    - DrydockHardwareProfile
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     vendor:
@@ -46,4 +59,10 @@ spec:
           count:
             type: 'number'
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
