--- a/deckhand-poc-ascrd/airship/crds/DrydockHostProfile.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockHostProfile.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockHostProfile
+  name: DrydockHostProfile.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockHostProfile
+    plural: DrydockHostProfiles
+    shortNames:
+    - DrydockHostProfile
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     oob:
@@ -157,4 +170,10 @@ spec:
               trustmode:
                 type: 'boolean'
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
