--- a/deckhand-poc-ascrd/airship/crds/DrydockNetworkLink.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockNetworkLink.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockNetworkLink
+  name: DrydockNetworkLink.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockNetworkLink
+    plural: DrydockNetworkLinks
+    shortNames:
+    - DrydockNetworkLink
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     bonding:
@@ -44,4 +57,10 @@ spec:
       type: 'object'
       additionalProperties: true
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
