--- a/deckhand-poc-ascrd/airship/crds/DrydockRack.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockRack.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockRack
+  name: DrydockRack.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockRack
+    plural: DrydockRacks
+    shortNames:
+    - DrydockRack
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     tor_switches:
@@ -32,4 +45,10 @@ spec:
       type: 'object'
       additionalProperties: true
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
