--- a/deckhand-poc-ascrd/airship/crds/DrydockRegion.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockRegion.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockRegion
+  name: DrydockRegion.drydock.airship.org
   labels:
     application: drydock
 spec:
+  additionalPrinterColumns:
+  group: drydock.airshipit.org
+  version: v1alpha1
+  names:
+    kind: DrydockRegion
+    plural: DrydockRegions
+    shortNames:
+    - DrydockRegion
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     tag_definitions:
@@ -68,4 +81,10 @@ spec:
           - 'url'
           - 'arches'
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
