--- a/deckhand-poc-ascrd/airship/crds/PeglegAccountCatalogue.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegAccountCatalogue.yaml
@@ -2,8 +2,21 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegAccountCatalogue
+  name: PeglegAccountCatalogue.pegleg.airship.org
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegAccountCatalogue
+    plural: PeglegAccountCatalogues
+    shortNames:
+    - PeglegAccountCatalogue
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: object
   properties:
     ucp:
@@ -641,4 +654,10 @@ spec:
               properties:
                 username:
                   type: string
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
