--- a/deckhand-poc-ascrd/airship/crds/PeglegAppArmorProfile.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegAppArmorProfile.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegAppArmorProfile
+  name: PeglegAppArmorProfile.pegleg.airship.org
   labels:
     application: pegleg
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegAppArmorProfile
+    plural: PeglegAppArmorProfiles
+    shortNames:
+    - PeglegAppArmorProfile
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   additionalProperties: false
   properties:
@@ -14,4 +27,10 @@ spec:
     content:
       type: 'string'
   required: ['savePath', 'content']
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
