--- a/deckhand-poc-ascrd/airship/crds/PeglegCommonAddresses.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegCommonAddresses.yaml
@@ -2,8 +2,21 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegCommonAddresses
+  name: PeglegCommonAddresses.pegleg.airship.org
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegCommonAddresses
+    plural: PeglegCommonAddressess
+    shortNames:
+    - PeglegCommonAddresses
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: object
   properties:
     calico:
@@ -112,4 +125,10 @@ spec:
           type: string
         external_iface:
           type: string
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
