--- a/deckhand-poc-ascrd/airship/crds/PeglegCommonSoftwareConfig.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegCommonSoftwareConfig.yaml
@@ -2,8 +2,21 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegCommonSoftwareConfig
+  name: PeglegCommonSoftwareConfig.pegleg.airship.org
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegCommonSoftwareConfig
+    plural: PeglegCommonSoftwareConfigs
+    shortNames:
+    - PeglegCommonSoftwareConfig
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: object
   properties:
     osh:
@@ -11,4 +24,10 @@ spec:
       properties:
         region_name:
           type: string
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
