--- a/deckhand-poc-ascrd/airship/crds/PeglegEndpointCatalogue.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegEndpointCatalogue.yaml
@@ -2,8 +2,21 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegEndpointCatalogue
+  name: PeglegEndpointCatalogue.pegleg.airship.org
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegEndpointCatalogue
+    plural: PeglegEndpointCatalogues
+    shortNames:
+    - PeglegEndpointCatalogue
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   # Namespace the list of endpoints
   additionalProperties:
@@ -158,4 +171,10 @@ spec:
                 type: number
             additionalProperties:
               type: number
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
