--- a/deckhand-poc-ascrd/airship/crds/PeglegScript.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegScript.yaml
@@ -2,7 +2,26 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegScript
+  name: PeglegScript.pegleg.airship.org
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegScript
+    plural: PeglegScripts
+    shortNames:
+    - PeglegScript
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: string
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
