--- a/deckhand-poc-ascrd/airship/crds/PeglegSeccompProfile.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegSeccompProfile.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegSeccompProfile
+  name: PeglegSeccompProfile.pegleg.airship.org
   labels:
     application: pegleg
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegSeccompProfile
+    plural: PeglegSeccompProfiles
+    shortNames:
+    - PeglegSeccompProfile
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   additionalProperties: false
   properties:
@@ -16,4 +29,10 @@ spec:
     content:
       type: 'string'
   required: ['seccompDirPath', 'savePath', 'content']
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
