--- a/deckhand-poc-ascrd/airship/crds/PeglegSoftwareVersions.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegSoftwareVersions.yaml
@@ -2,8 +2,21 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegSoftwareVersions
+  name: PeglegSoftwareVersions.pegleg.airship.org
 spec:
+  additionalPrinterColumns:
+  group: pegleg.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PeglegSoftwareVersions
+    plural: PeglegSoftwareVersionss
+    shortNames:
+    - PeglegSoftwareVersions
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: object
   properties:
     charts:
@@ -1200,4 +1213,10 @@ spec:
           type: array
           items:
             type: string
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
