--- a/deckhand-poc-ascrd/airship/crds/PromenadeDocker.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeDocker.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeDocker
+  name: PromenadeDocker.promenade.airship.org
   labels:
     application: promenade
 spec:
+  additionalPrinterColumns:
+  group: promenade.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PromenadeDocker
+    plural: PromenadeDockers
+    shortNames:
+    - PromenadeDocker
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: object
   properties:
     config:
@@ -13,4 +26,10 @@ spec:
   required:
     - config
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
