--- a/deckhand-poc-ascrd/airship/crds/PromenadeHostSystem.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeHostSystem.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeHostSystem
+  name: PromenadeHostSystem.promenade.airship.org
   labels:
     application: promenade
 spec:
+  additionalPrinterColumns:
+  group: promenade.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PromenadeHostSystem
+    plural: PromenadeHostSystems
+    shortNames:
+    - PromenadeHostSystem
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   definitions:
     abs_path:
       type: string
@@ -134,4 +147,10 @@ spec:
     - images
     - packages
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
