--- a/deckhand-poc-ascrd/airship/crds/PromenadeKubelet.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeKubelet.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeKubelet
+  name: PromenadeKubelet.promenade.airship.org
   labels:
     application: promenade
 spec:
+  additionalPrinterColumns:
+  group: promenade.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PromenadeKubelet
+    plural: PromenadeKubelets
+    shortNames:
+    - PromenadeKubelet
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: object
   definitions:
     image:
@@ -28,4 +41,10 @@ spec:
   required:
     - images
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
