--- a/deckhand-poc-ascrd/airship/crds/PromenadeKubernetesNetwork.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeKubernetesNetwork.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeKubernetesNetwork
+  name: PromenadeKubernetesNetwork.promenade.airship.org
   labels:
     application: promenade
 spec:
+  additionalPrinterColumns:
+  group: promenade.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PromenadeKubernetesNetwork
+    plural: PromenadeKubernetesNetworks
+    shortNames:
+    - PromenadeKubernetesNetwork
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   definitions:
     cidr:
       type: string
@@ -117,4 +130,10 @@ spec:
     - dns
     - kubernetes
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
