--- a/deckhand-poc-ascrd/airship/crds/PromenadeKubernetesNode.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeKubernetesNode.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeKubernetesNode
+  name: PromenadeKubernetesNode.promenade.airship.org
   labels:
     application: promenade
 spec:
+  additionalPrinterColumns:
+  group: promenade.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PromenadeKubernetesNode
+    plural: PromenadeKubernetesNodes
+    shortNames:
+    - PromenadeKubernetesNode
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   definitions:
     hostname:
       type: string
@@ -44,4 +57,10 @@ spec:
     - ip
     - join_ip
   additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
