--- a/deckhand-poc-ascrd/airship/crds/PromenadePKICatalog.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadePKICatalog.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadePKICatalog
+  name: PromenadePKICatalog.promenade.airship.org
   labels:
     application: promenade
 spec:
+  additionalPrinterColumns:
+  group: promenade.airshipit.org
+  version: v1alpha1
+  names:
+    kind: PromenadePKICatalog
+    plural: PromenadePKICatalogs
+    shortNames:
+    - PromenadePKICatalog
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   certificate_authorities:
     type: array
     items:
@@ -39,4 +52,10 @@ spec:
           type: string
         description:
           type: string
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
