--- a/deckhand-poc-ascrd/airship/crds/ShipyardDeploymentConfiguration.yaml
+++ b/deckhand-poc-ascrd/airship/crds/ShipyardDeploymentConfiguration.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: ShipyardDeploymentConfiguration
+  name: ShipyardDeploymentConfiguration.shipyard.airship.org
   labels:
     application: shipyard
 spec:
+  additionalPrinterColumns:
+  group: shipyard.airshipit.org
+  version: v1alpha1
+  names:
+    kind: ShipyardDeploymentConfiguration
+    plural: ShipyardDeploymentConfigurations
+    shortNames:
+    - ShipyardDeploymentConfiguration
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   properties:
     physical_provisioner:
@@ -77,4 +90,10 @@ spec:
   additionalProperties: false
   required:
     - armada
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
