--- a/deckhand-poc-ascrd/airship/crds/ShipyardDeploymentStrategy.yaml
+++ b/deckhand-poc-ascrd/airship/crds/ShipyardDeploymentStrategy.yaml
@@ -2,10 +2,23 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: ShipyardDeploymentStrategy
+  name: ShipyardDeploymentStrategy.shipyard.airship.org
   labels:
     application: shipyard
 spec:
+  additionalPrinterColumns:
+  group: shipyard.airshipit.org
+  version: v1alpha1
+  names:
+    kind: ShipyardDeploymentStrategy
+    plural: ShipyardDeploymentStrategys
+    shortNames:
+    - ShipyardDeploymentStrategy
+  scope: Namespaced
+  subresources:
+    status: {}
+  # validation:
+  #   openAPIV3Schema:
   type: 'object'
   required:
     - groups
@@ -70,4 +83,10 @@ spec:
                 type: 'integer'
                 minimum: 0
             additionalProperties: false
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ...
