Get CRD compliant

--- a/deckhand-poc-ascrd/airship/crds/DrydockRack.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockRack.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockRack.drydock.airship.org
+  name: drydockracks.drydock.airshipit.org
   labels:
     application: drydock
 spec:
@@ -11,40 +11,54 @@ spec:
   version: v1alpha1
   names:
     kind: DrydockRack
-    plural: DrydockRacks
+    plural: drydockracks
     shortNames:
-    - DrydockRack
+    - drack
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: 'object'
-  properties:
-    tor_switches:
-      type: 'object'
+  validation:
+    openAPIV3Schema:
       properties:
-        mgmt_ip:
-          type: 'string'
-          format: 'ipv4'
-        sdn_api_uri:
-          type: 'string'
-          format: 'uri'
-    location:
-      type: 'object'
-      properties:
-        clli:
-          type: 'string'
-        grid:
-          type: 'string'
-    local_networks:
-      type: 'array'
-      items:
-        type: 'string'
-    labels:
-      type: 'object'
-      additionalProperties: true
-  additionalProperties: false
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: 'object'
+          properties:
+            tor_switches:
+              type: 'object'
+              properties:
+                mgmt_ip:
+                  type: 'string'
+                  format: 'ipv4'
+                sdn_api_uri:
+                  type: 'string'
+                  format: 'uri'
+            location:
+              type: 'object'
+              properties:
+                clli:
+                  type: 'string'
+                grid:
+                  type: 'string'
+            local_networks:
+              type: 'array'
+              items:
+                type: 'string'
+            labels:
+              type: 'object'
+              additionalProperties: true
+          # additionalProperties: false
 status:
   acceptedNames:
     kind: ""
