--- a/deckhand-poc-ascrd/airship/crds/PromenadeKubernetesNode.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeKubernetesNode.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeKubernetesNode.promenade.airship.org
+  name: promenadekubernetesnodes.promenade.airshipit.org
   labels:
     application: promenade
 spec:
@@ -11,52 +11,74 @@ spec:
   version: v1alpha1
   names:
     kind: PromenadeKubernetesNode
-    plural: PromenadeKubernetesNodes
+    plural: promenadekubernetesnodes
     shortNames:
-    - PromenadeKubernetesNode
+    - pkubnode
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  definitions:
-    hostname:
-      type: string
-      pattern: '^[a-z][a-z0-9-]+$'
-    ip_address:
-      type: string
-      pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
-    kubernetes_label:
-      type: string
-      # XXX add regex
-
-  type: object
-  properties:
-    hostname:
-      $ref: '#/definitions/hostname'
-
-    ip:
-      $ref: '#/definitions/ip_address'
-
-    join_ip:
-      $ref: '#/definitions/ip_address'
-
-    labels:
+  validation:
+    openAPIV3Schema:
       properties:
-        static:
-          type: array
-          items:
-            $ref: '#/definitions/kubernetes_label'
-        dynamic:
-          type: array
-          items:
-            $ref: '#/definitions/kubernetes_label'
-      additionalProperties: false
-
-  required:
-    - ip
-    - join_ip
-  additionalProperties: false
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          # definitions:
+          #   hostname:
+          #     type: string
+          #     pattern: '^[a-z][a-z0-9-]+$'
+          #   ip_address:
+          #     type: string
+          #     pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
+          #   kubernetes_label:
+          #     type: string
+          #     # XXX add regex
+        
+          type: object
+          properties:
+            hostname:
+              # $ref: '#/definitions/hostname'
+              type: string
+              pattern: '^[a-z][a-z0-9-]+$'
+        
+            ip:
+              # $ref: '#/definitions/ip_address'
+              type: string
+              pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
+        
+            join_ip:
+              # $ref: '#/definitions/ip_address'
+              type: string
+              pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
+        
+            labels:
+              properties:
+                static:
+                  type: array
+                  items:
+                    # $ref: '#/definitions/kubernetes_label'
+                    type: string
+                dynamic:
+                  type: array
+                  items:
+                    # $ref: '#/definitions/kubernetes_label'
+                    type: string
+              # additionalProperties: false
+        
+          required:
+            - ip
+            - join_ip
+          # additionalProperties: false
 status:
   acceptedNames:
     kind: ""
