--- a/deckhand-poc-ascrd/airship/crds/ArmadaManifest.yaml
+++ b/deckhand-poc-ascrd/airship/crds/ArmadaManifest.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: ArmadaManifest.armada.airship.org
+  name: armadamanifests.armada.airshipit.org
   labels:
     application: armada
 spec:
@@ -11,16 +11,30 @@ spec:
   version: v1alpha1
   names:
     kind: ArmadaManifest
-    plural: ArmadaManifests
+    plural: armadamanifests
     shortNames:
-    - ArmadaManifest
+    - amf
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: 'object'
-  additionalProperties: true
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: 'object'
+          additionalProperties: true
 status:
   acceptedNames:
     kind: ""
