--- a/deckhand-poc-ascrd/airship/crds/DrydockHardwareProfile.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockHardwareProfile.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockHardwareProfile.drydock.airship.org
+  name: drydockhardwareprofiles.drydock.airshipit.org
   labels:
     application: drydock
 spec:
@@ -11,54 +11,68 @@ spec:
   version: v1alpha1
   names:
     kind: DrydockHardwareProfile
-    plural: DrydockHardwareProfiles
+    plural: drydockhardwareprofiles
     shortNames:
-    - DrydockHardwareProfile
+    - dhwprof
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: 'object'
-  properties:
-    vendor:
-      type: 'string'
-    generation:
-      type: 'string'
-    hw_version:
-      type: 'string'
-    bios_version:
-      type: 'string'
-    boot_mode:
-      type: 'string'
-      enum:
-        - 'bios'
-        - 'uefi'
-    bootstrap_protocol:
-      type: 'string'
-      enum:
-        - 'pxe'
-        - 'usb'
-        - 'hdd'
-    pxe_interface:
-      type: 'number'
-    device_aliases:
-      type: 'object'
-      additionalProperties: true
-    cpu_sets:
-      type: 'object'
-      additionalProperties:
-        type: 'string'
-    hugepages:
-      type: 'object'
-      additionalProperties:
-        type: 'object'
-        propertes:
-          size:
-            type: 'string'
-          count:
-            type: 'number'
-  additionalProperties: false
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: 'object'
+          properties:
+            vendor:
+              type: 'string'
+            generation:
+              type: 'string'
+            hw_version:
+              type: 'string'
+            bios_version:
+              type: 'string'
+            boot_mode:
+              type: 'string'
+              enum:
+                - 'bios'
+                - 'uefi'
+            bootstrap_protocol:
+              type: 'string'
+              enum:
+                - 'pxe'
+                - 'usb'
+                - 'hdd'
+            pxe_interface:
+              type: 'number'
+            device_aliases:
+              type: 'object'
+              additionalProperties: true
+            cpu_sets:
+              type: 'object'
+              additionalProperties:
+                type: 'string'
+            hugepages:
+              type: 'object'
+              additionalProperties:
+                type: 'object'
+                propertes:
+                  size:
+                    type: 'string'
+                  count:
+                    type: 'number'
+          # additionalProperties: false
 status:
   acceptedNames:
     kind: ""
