--- a/deckhand-poc-ascrd/airship/crds/DrydockRegion.yaml
+++ b/deckhand-poc-ascrd/airship/crds/DrydockRegion.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: DrydockRegion.drydock.airship.org
+  name: drydockregions.drydock.airshipit.org
   labels:
     application: drydock
 spec:
@@ -11,76 +11,89 @@ spec:
   version: v1alpha1
   names:
     kind: DrydockRegion
-    plural: DrydockRegions
+    plural: drydockregions
     shortNames:
-    - DrydockRegion
+    - dreg
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: 'object'
-  properties:
-    tag_definitions:
-      type: 'array'
-      items:
-        type: 'object'
-        properties:
-          tag:
-            type: 'string'
-          definition_type:
-            type: 'string'
-            enum:
-              - 'lshw_xpath'
-          definition:
-            type: 'string'
-        additionalProperties: false
-    authorized_keys:
-      type: 'array'
-      items:
-        type: 'string'
-    repositories:
-      # top level is class (e.g. apt, rpm)
-      type: 'object'
+  validation:
+    openAPIV3Schema:
       properties:
-        remove_unlisted:
-          type: 'boolean'
-      additionalPropties:
-        type: 'object'
-        properties:
-          repo_type:
-            type: 'string'
-            pattern: 'apt|rpm'
-          url:
-            type: 'string'
-          distributions:
-            type: 'array'
-            items:
-              type: 'string'
-          subrepos:
-            type: 'array'
-            items:
-              type: 'string'
-          components:
-            type: 'array'
-            items:
-              type: 'string'
-          gpgkey:
-            type: 'string'
-          arches:
-            type: 'array'
-            items:
-              type: 'string'
-          options:
-            type: 'object'
-            additionalProperties:
-              type: 'string'
-        additionalProperties: false
-        required:
-          - 'repo_type'
-          - 'url'
-          - 'arches'
-  additionalProperties: false
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: 'object'
+          properties:
+            tag_definitions:
+              type: 'array'
+              items:
+                type: 'object'
+                properties:
+                  tag:
+                    type: 'string'
+                  definition_type:
+                    type: 'string'
+                    enum:
+                      - 'lshw_xpath'
+                  definition:
+                    type: 'string'
+                # additionalProperties: false
+            authorized_keys:
+              type: 'array'
+              items:
+                type: 'string'
+            repositories:
+              # top level is class (e.g. apt, rpm)
+              type: 'object'
+              # properties:
+              #   remove_unlisted:
+              #     type: 'boolean'
+              additionalProperties:
+                type: 'object'
+                properties:
+                  repo_type:
+                    type: 'string'
+                    pattern: 'apt|rpm'
+                  url:
+                    type: 'string'
+                  distributions:
+                    type: 'array'
+                    items:
+                      type: 'string'
+                  subrepos:
+                    type: 'array'
+                    items:
+                      type: 'string'
+                  components:
+                    type: 'array'
+                    items:
+                      type: 'string'
+                  gpgkey:
+                    type: 'string'
+                  arches:
+                    type: 'array'
+                    items:
+                      type: 'string'
+                  options:
+                    type: 'object'
+                    additionalProperties:
+                      type: 'string'
+                # additionalProperties: false
+                required:
+                  - 'repo_type'
+                  - 'url'
+                  - 'arches'
 status:
   acceptedNames:
     kind: ""
