--- a/deckhand-poc-ascrd/airship/crds/PeglegCommonSoftwareConfig.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegCommonSoftwareConfig.yaml
@@ -2,28 +2,42 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegCommonSoftwareConfig.pegleg.airship.org
+  name: peglegcommonsoftwareconfigs.pegleg.airshipit.org
 spec:
   additionalPrinterColumns:
   group: pegleg.airshipit.org
   version: v1alpha1
   names:
     kind: PeglegCommonSoftwareConfig
-    plural: PeglegCommonSoftwareConfigs
+    plural: peglegcommonsoftwareconfigs
     shortNames:
-    - PeglegCommonSoftwareConfig
+    - psoftconf
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: object
-  properties:
-    osh:
-      type: object
+  validation:
+    openAPIV3Schema:
       properties:
-        region_name:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
           type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: object
+          properties:
+            osh:
+              type: object
+              properties:
+                region_name:
+                  type: string
 status:
   acceptedNames:
     kind: ""
