--- a/deckhand-poc-ascrd/airship/crds/PeglegSeccompProfile.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PeglegSeccompProfile.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PeglegSeccompProfile.pegleg.airship.org
+  name: peglegseccompprofiles.pegleg.airshipit.org
   labels:
     application: pegleg
 spec:
@@ -11,24 +11,36 @@ spec:
   version: v1alpha1
   names:
     kind: PeglegSeccompProfile
-    plural: PeglegSeccompProfiles
+    plural: peglegseccompprofiles
     shortNames:
-    - PeglegSeccompProfile
+    - psecccompprof
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: 'object'
-  additionalProperties: false
-  properties:
-    seccompDirPath:
-      type: 'string'
-    savePath:
-      type: 'string'
-    content:
-      type: 'string'
-  required: ['seccompDirPath', 'savePath', 'content']
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            seccompDirPath:
+              type: 'string'
+            savePath:
+              type: 'string'
+            content:
+              type: 'string'
+          required: ['seccompDirPath', 'savePath', 'content']
 status:
   acceptedNames:
     kind: ""
