--- a/deckhand-poc-ascrd/airship/crds/PromenadeDocker.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeDocker.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeDocker.promenade.airship.org
+  name: promenadedockers.promenade.airshipit.org
   labels:
     application: promenade
 spec:
@@ -11,21 +11,35 @@ spec:
   version: v1alpha1
   names:
     kind: PromenadeDocker
-    plural: PromenadeDockers
+    plural: promenadedockers
     shortNames:
-    - PromenadeDocker
+    - pdocker
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: object
-  properties:
-    config:
-      type: object
-  required:
-    - config
-  additionalProperties: false
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: object
+          properties:
+            config:
+              type: object
+          required:
+            - config
+          # additionalProperties: false
 status:
   acceptedNames:
     kind: ""
