--- a/deckhand-poc-ascrd/airship/crds/PromenadeGenesis.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeGenesis.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeGenesis.promenade.airship.org
+  name: promenadegenesiss.promenade.airshipit.org
   labels:
     application: promenade
 spec:
@@ -11,148 +11,209 @@ spec:
   version: v1alpha1
   names:
     kind: PromenadeGenesis
-    plural: PromenadeGenesiss
+    plural: promenadegenesiss
     shortNames:
-    - PromenadeGenesis
+    - pgenesis
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  definitions:
-    abs_path:
-      type: string
-      pattern: '^/.+$'
-    hostname:
-      type: string
-      pattern: '^[a-z][a-z0-9-]+$'
-    file:
+  validation:
+    openAPIV3Schema:
       properties:
-        path:
-          $ref: '#/definitions/abs_path'
-        content:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
           type: string
-        mode:
-          type: integer
-          minimum: 0
-        tar_url:
-          $ref: '#/definitions/url'
-        tar_path:
-          $ref: '#/definitions/rel_path'
-
-      required:
-        - mode
-        - path
-      oneOf:
-        - type: object
-          required:
-            - content
-        - type: object
-          allOf:
-            - type: object
-              required:
-                - tar_url
-                - tar_path
-      additionalProperties: false
-    image:
-      type: string
-      # XXX add regex
-    ip_address:
-      type: string
-      pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
-    kubernetes_label:
-      type: string
-      # XXX add regex
-    rel_path:
-      type: string
-      # XXX add regex
-
-  type: object
-  properties:
-    armada:
-      type: object
-      properties:
-        target_manifest:
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
-      additionalProperties: false
-
-    apiserver:
-      type: object
-      properties:
-        command_prefix:
-          type: array
-          items:
-            type: string
-      additionalProperties: false
-
-    files:
-      type: array
-      items:
-        $ref: '#/definitions/file'
-
-    hostname:
-      $ref: '#/definitions/hostname'
-
-    domain:
-      type: string
-
-    ip:
-      $ref: '#/definitions/ip_address'
-
-    labels:
-      properties:
-        static:
-          type: array
-          items:
-            $ref: '#/definitions/kubernetes_label'
-        dynamic:
-          type: array
-          items:
-            $ref: '#/definitions/kubernetes_label'
-      additionalProperties: false
-
-    images:
-      type: object
-      properties:
-        armada:
-          $ref: '#/definitions/image'
-        helm:
+        metadata:
+          type: object
+        spec:
+          # definitions:
+          #   abs_path:
+          #     type: string
+          #     pattern: '^/.+$'
+          #   hostname:
+          #     type: string
+          #     pattern: '^[a-z][a-z0-9-]+$'
+          #   file:
+          #     properties:
+          #       path:
+          #         # $ref: '#/definitions/abs_path'
+          #         type: string
+          #         pattern: '^/.+$'
+          #       content:
+          #         type: string
+          #       mode:
+          #         type: integer
+          #         minimum: 0
+          #       tar_url:
+          #         # $ref: '#/definitions/url'
+          #         type: string
+          #       tar_path:
+          #         # $ref: '#/definitions/rel_path'
+          #         type: string
+          #     required:
+          #       - mode
+          #       - path
+          #     oneOf:
+          #       - type: object
+          #         required:
+          #           - content
+          #       - type: object
+          #         allOf:
+          #           - type: object
+          #             required:
+          #               - tar_url
+          #               - tar_path
+          #     # additionalProperties: false
+          #   image:
+          #     type: string
+          #     # XXX add regex
+          #   ip_address:
+          #     type: string
+          #     pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
+          #   kubernetes_label:
+          #     type: string
+          #     # XXX add regex
+          #   rel_path:
+          #     type: string
+          #     # XXX add regex
+        
           type: object
           properties:
-            tiller:
-              $ref: '#/definitions/image'
-          required:
-            - tiller
-          additionalProperties: false
-        kubernetes:
-          type: object
-          properties:
+            armada:
+              type: object
+              properties:
+                target_manifest:
+                  type: string
+              # additionalProperties: false
+        
             apiserver:
-              $ref: '#/definitions/image'
-            controller-manager:
-              $ref: '#/definitions/image'
-            etcd:
-              $ref: '#/definitions/image'
-            scheduler:
-              $ref: '#/definitions/image'
+              type: object
+              properties:
+                command_prefix:
+                  type: array
+                  items:
+                    type: string
+              # additionalProperties: false
+        
+            files:
+              type: array
+              items:
+                # $ref: '#/definitions/file'
+                type: object
+                properties:
+                  path:
+                    # $ref: '#/definitions/abs_path'
+                    type: string
+                    pattern: '^/.+$'
+                  content:
+                    type: string
+                  mode:
+                    type: integer
+                    minimum: 0
+                  tar_url:
+                    # $ref: '#/definitions/url'
+                    type: string
+                  tar_path:
+                    # $ref: '#/definitions/rel_path'
+                    type: string
+          
+                required:
+                  - mode
+                  - path
+                oneOf:
+                  - type: object
+                    required:
+                      - content
+                  - type: object
+                    allOf:
+                      - type: object
+                        required:
+                          - tar_url
+                          - tar_path
+                # additionalProperties: false
+        
+            hostname:
+              # $ref: '#/definitions/hostname'
+              type: string
+              pattern: '^[a-z][a-z0-9-]+$'
+        
+            domain:
+              type: string
+        
+            ip:
+              # $ref: '#/definitions/ip_address'
+              type: string
+              pattern: '^(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))\.(\d|[1-9]\d|1\d\d|2([0-4]\d|5[0-5]))$'
+        
+            labels:
+              properties:
+                static:
+                  type: array
+                  items:
+                    # $ref: '#/definitions/kubernetes_label'
+                    type: string
+                dynamic:
+                  type: array
+                  items:
+                    # $ref: '#/definitions/kubernetes_label'
+                    type: string
+              # additionalProperties: false
+        
+            images:
+              type: object
+              properties:
+                armada:
+                  # $ref: '#/definitions/image'
+                  type: string
+                helm:
+                  type: object
+                  properties:
+                    tiller:
+                      # $ref: '#/definitions/image'
+                      type: string
+                  required:
+                    - tiller
+                  # additionalProperties: false
+                kubernetes:
+                  type: object
+                  properties:
+                    apiserver:
+                      # $ref: '#/definitions/image'
+                      type: string
+                    controller-manager:
+                      # $ref: '#/definitions/image'
+                      type: string
+                    etcd:
+                      # $ref: '#/definitions/image'
+                      type: string
+                    scheduler:
+                      # $ref: '#/definitions/image'
+                      type: string
+                  required:
+                    - apiserver
+                    - controller-manager
+                    - etcd
+                    - scheduler
+                  # additionalProperties: false
+              required:
+                - armada
+                - helm
+                - kubernetes
+              # additionalProperties: false
+        
           required:
-            - apiserver
-            - controller-manager
-            - etcd
-            - scheduler
-          additionalProperties: false
-      required:
-        - armada
-        - helm
-        - kubernetes
-      additionalProperties: false
-
-  required:
-    - hostname
-    - ip
-    - images
-    - labels
-  additionalProperties: false
+            - hostname
+            - ip
+            - images
+            - labels
+          # additionalProperties: false
 status:
   acceptedNames:
     kind: ""
