--- a/deckhand-poc-ascrd/airship/crds/PromenadeKubelet.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeKubelet.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadeKubelet.promenade.airship.org
+  name: promenadekubelets.promenade.airshipit.org
   labels:
     application: promenade
 spec:
@@ -11,36 +11,51 @@ spec:
   version: v1alpha1
   names:
     kind: PromenadeKubelet
-    plural: PromenadeKubelets
+    plural: promenadekubelets
     shortNames:
-    - PromenadeKubelet
+    - pkubelet
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  type: object
-  definitions:
-    image:
-      type: string
-      # XXX add regex
-
-  properties:
-    images:
-      type: object
+  validation:
+    openAPIV3Schema:
       properties:
-        pause:
-          $ref: '#/definitions/image'
-      required:
-        - pause
-      additionalProperties: false
-    arguments:
-      type: array
-      items:
-        type: string
-  required:
-    - images
-  additionalProperties: false
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: object
+          # definitions:
+          #   image:
+          #     type: string
+          #     # XXX add regex
+        
+          properties:
+            images:
+              type: object
+              properties:
+                pause:
+                  # $ref: '#/definitions/image'
+                  type: string
+              required:
+                - pause
+              # additionalProperties: false
+            arguments:
+              type: array
+              items:
+                type: string
+          required:
+            - images
+          # additionalProperties: false
 status:
   acceptedNames:
     kind: ""
