--- a/deckhand-poc-ascrd/airship/crds/PromenadePKICatalog.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadePKICatalog.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: PromenadePKICatalog.promenade.airship.org
+  name: promenadepkicatalogs.promenade.airshipit.org
   labels:
     application: promenade
 spec:
@@ -11,47 +11,62 @@ spec:
   version: v1alpha1
   names:
     kind: PromenadePKICatalog
-    plural: PromenadePKICatalogs
+    plural: promenadepkicatalogs
     shortNames:
-    - PromenadePKICatalog
+    - ppkicat
   scope: Namespaced
   subresources:
     status: {}
-  # validation:
-  #   openAPIV3Schema:
-  certificate_authorities:
-    type: array
-    items:
-      type: object
+  validation:
+    openAPIV3Schema:
       properties:
-        description:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
           type: string
-        certificates:
-          type: array
-          items:
-            type: object
-            properties:
-              document_name:
-                type: string
-              description:
-                type: string
-              common_name:
-                type: string
-              hosts:
-                type: array
-                items: string
-              groups:
-                type: array
-                items: string
-  keypairs:
-    type: array
-    items:
-      type: object
-      properties:
-        name:
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
-        description:
-          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            certificate_authorities:
+              type: array
+              items:
+                type: object
+                properties:
+                  description:
+                    type: string
+                  certificates:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        document_name:
+                          type: string
+                        description:
+                          type: string
+                        common_name:
+                          type: string
+                        hosts:
+                          type: array
+                          items: string
+                        groups:
+                          type: array
+                          items: string
+            keypairs:
+              type: array
+              items:
+                type: object
+                properties:
+                  name:
+                    type: string
+                  description:
+                    type: string
 status:
   acceptedNames:
     kind: ""
